index.css
body {
    margin: 0;
    background-color: #DEDEDE;

} 

.app-container {
    width: 600px;
    height: 1161px;
    margin: 0 auto;
    
}

header{
background-image: url('images/burger.jpg');
background-size: cover;
background-position: center;
width: 554px;
height: 167px;
padding-top: 46px;
color : #FFFFFF;
margin: 0  auto;
}


.headerfont {
     font-family: "Smythe", system-ui;
    font-weight: 400;
    font-style: normal;
 }

    
header h1 {
    font-size: 39px;
    margin-top: 0;
    margin-left: 46px;
    margin-bottom: 19px;
}

header h2 {
    font-size: 22.42px;
     margin-left: 46px;
    margin-top: 0;
    margin-bottom: 0;
}


.menuOuter {
 width: 554px;
 margin: 0 auto;
 background-color:  #FFFFFF;
}

.menuitems {
    display: flex;
    gap: 20px;
    margin : 0 auto;
    padding: 20px 0 20px 0;
    width: 85%;
    max-width: 490px; /* Optional: to mimic the image's tighter layout */
    height: 140px;
    border-bottom: 2px solid #DEDEDE;
    background-color:  #FFFFFF;
    
     
  align-items: center;
}

.menuitems h1,
.menuitems h2,
.menuitems h3 {
  margin: 0;
}

.emoji {
    width: 70px;
    height:89px;
    font-size: 60px;
    margin-right: 31px;
}

.menuname {
    font-size: 28px;
    margin-left: 0;
}

.menuingredients{
    font-size: 16px;
    margin-left: 0;
}

.menuprice {
    font-size : 20px;
    margin-left: 0;
}

.menudetails {
    margin-left: 0;
    padding-left: 0;
    width: 358px;

}

.symbol { 
    border: 1px solid #DEDEDE; /* Example border */
  border-radius: 35px; /* Example radius for all corners */
   padding: 17px; 
   
}

.symbolsection {
    width: 50px;
    margin: 0;

}

.ordersection {
    width: 470.881px;
    height: 319px;
    background-color:  #FFFFFF;
    margin: 0 auto;
    padding: 20px 42px 20px 40px;
    font-size: 28px;
     font-family: "Smythe", system-ui;
    font-weight: 400;
    font-style: normal;
}

.fontsize28 {
    font-size: 28px;
}

.ordersection h2 {
    text-align: center;
    font-weight: 400;
}

.totalpricecontainer {
    display: flex;
    justify-content: space-between;
    border-top: 2px solid black;
    margin-top: 0;
    padding-top: 0;
}

.completebutton {
    width: 100%;
    height: 60px;
    padding: 0;
    margin: 0 auto;
    background-color: #16DB99;
    color: #FFFFFF;
    font-size: 16px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-weight: 700;
    border: none;
}

.cartcontent {
    display: flex;
    justify-content: space-between;
}

.cartcontent p {
    margin: 0;
}

